--- a/frontend-fourtwoninepartnine/index.html
+++ b/frontend-fourtwoninepartnine/index.html
@@ -7,6 +7,19 @@
         <!-- <link href="css/style.css" rel="stylesheet"> -->
     </head>
     <body>
+        <h1>Shopping List</h1>
+
+        <div>
+            <h3>Write a list!</h3>
+            <form id="list-form">
+                <input type="text" id="list-input">
+                <input type="submit">
+            </form>
+            <ul id="list-list">
+    
+            </ul>
+        </div>
+
         <script src="./src/index.js"></script>
     </body>
 </html>
